Atualizando o projeto.